--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@
     </div>
 
     <button class="button" id="get-weather">Get Weather</button>
+    <i class="fa-solid fa-arrow-right" style="color: black"></i>
+    <i class="fa-solid fa-arrow-left" style="color: black"></i>
 
     <p id="city-description">Found city: <span id="city-span"></span></p>
         <table id="weather-result-table">
