--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load sass_tags %}
 {% load static %}
 <!doctype html>
 <html lang="en">
@@ -19,7 +20,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@500&family=Inter&family=Spectral:wght@200&display=swap" rel="stylesheet">
 
     {#  ******************** LOCAL STYLES ******************** #}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <link href="{% sass_src 'css/style.scss' %}" rel="stylesheet" type="text/css">
 
 
 </head>
