- added scss - added pagination - backend finished - connected celery task to create WeatherData models - split requests into chunks (30 elements) due to external response limit of 35 forecasts - added error window & red highlighting of incorrect data - etc...

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -9,7 +9,7 @@
 }
 /*   --------------   --------------   --------------   */
 
-
+/*   --------------  VARIABLES   --------------   */
 $light-color: #f7f7f7;
 $light-hover-color: #e1e1e1;
 $dark-color: #393e46;
@@ -20,20 +20,6 @@ $error-color: #ec5555;
 $error-dense-color: #f5a5a5;
 
 $nav-height: 60px;
-
-/*   --------------   ROOT VARIABLES   --------------   */
-//:root {
-//  --light-color: #f7f7f7;
-//  --light-hover-color: #e1e1e1;
-//  --dark-color: #393e46;
-//  --primary-color: #063d69;
-//  --secondary-color: #f6cd47;
-//
-//  --error-color: #ec5555;
-//  --error-dense-color: #f5a5a5;
-//
-//  --nav-height: 60px;
-//}
 /*   --------------   --------------   --------------   */
 
 
