--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -55,9 +55,23 @@ header {
   margin: 0 auto;
   padding: 5% 0;
   max-width: 1310px;
-  min-width: 970px;
   position: relative;
   width: 100%;
+}
+
+.find-weather {
+  margin: 0 auto;
+  padding: 15px 25px;
+
+  display: flex;
+  flex-direction: column;
+  row-gap: 35px;
+  justify-content: center;
+  align-items: center;
+
+  h1 {
+    text-align: center;
+  }
 }
 
 .input-section {
@@ -232,11 +246,8 @@ header {
 /*   --------------   --------------   --------------   */
 
 /*   --------------   TABLE   --------------   */
-#weather-result-table {
-  display: none;
-}
 
-table {
+#weather-result-table {
   width: 100%;
   border-collapse: collapse;
   margin: 30px 0;
@@ -274,4 +285,144 @@ table {
     }
   }
 }
+
+.card-section {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.card {
+  width: 100%;
+  height: 600px;
+  margin: 30px auto;
+  padding: 40px;
+
+  display: none;
+
+  background-color: $primary-color;
+  border-radius: 25px;
+
+  * {
+    color: $light-color;
+  }
+
+  h1 {
+    text-align: center;
+    color: $secondary-color;
+  }
+
+  .card-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    padding: 10px;
+
+    .card-label {
+      font-size: 20px;
+      margin-bottom: 2em;
+      font-weight: bold;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
 /*   --------------   --------------   --------------   */
+
+@media screen and (max-width: 1500px){
+  .wrap {
+    max-width: 1100px;
+  }
+}
+
+@media screen and (max-width: 1260px) {
+  .wrap {
+    max-width: 900px;
+  }
+}
+
+@media screen and (max-width: 1050px){
+  .wrap {
+    max-width: 700px;
+  }
+}
+
+@media screen and (max-width: 800px){
+  .wrap {
+    max-width: 600px;
+    padding: 2% 0;
+  }
+
+  #weather-result-table {
+    display: none;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .card-label {
+    font-size: 18px !important;
+  }
+
+  .find-weather {
+    height: calc(100vh - #{$nav-height});
+
+    .button {
+      width: 300px;
+    }
+  }
+
+  #pagination .button {
+    padding: 5px 10px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .wrap {
+    width: 100vw;
+
+  }
+
+  .find-weather {
+    height: calc(100vh - #{$nav-height});
+    padding: 5px;
+
+    * {
+      width: 80vw;
+    }
+  }
+
+
+  .input-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+  }
+
+  #get-weather {
+    width: 80vw;
+  }
+
+  .card {
+    h1 {
+      font-size: 16px !important;
+    }
+  }
+
+  .card-info {
+    p, p span {
+      font-size: 16px !important;
+    }
+  }
+}
