--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     {#  ******************** TITLE & FAVICON ******************** #}
     <title>{% block title %}{% endblock %}</title>
-<!--    <link rel="icon" href="{% static 'img/favicon/favicon.ico' %}">-->
+    <link rel="icon" href="{% static 'images/favicon/favicon.ico' %}">
 
     {#  ******************** META ******************** #}
     <meta charset="UTF-8">
